ponto de partida, backgrounds prontos fontes escolhidas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,39 @@
-*{
-margin: 0;
-padding: 0;
+/*
+font-family: "Fira Sans", sans-serif; mais grossa
+
+font-weight: 400;
+  font-style: normal
+
+*/
+:root{
+    --primary-color: #0B3841;
+    --white-color: #ffffff
+    --gap: 3rem;
+}
+.main-bg{
+    background-image: url('../images/main-bg.svg');
+    background-size: cover;
+    background-position: center center;
+    color: var(--white-color)
+}
+.white-bg{
+background: var(--white-color);
+}
+
+.main-content{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: var(--gap);
+}
+
+.section{
+    min-height: 100vh;
+}
+
+h1{
+    font-family: "Fira Sans", sans-serif;
+}
+h3{
+    font-weight: 400;
+  font-style: normal
 }
