sobre quase pronto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,164 @@
-/*
-font-family: "Fira Sans", sans-serif; mais grossa
-
-font-weight: 400;
-  font-style: normal
-
-*/
-:root{
-    --primary-color: #0B3841;
-    --white-color: #ffffff
+:root {
+    --primary-color: #0A1128;
+    --white-color: #FFFFFF;
+    --light-gray-color: #EEEEEE;
     --gap: 3rem;
-}
-.main-bg{
+  }
+  .logo-img{
+    width: 5rem;
+    align-items: center center;
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  html {
+    font-size: 62.5%;
+  }
+  body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2rem;
+    color: var(--primary-color);
+    line-height: 1.5;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+  }
+  h1 {
+    font-size: 6rem;
+    text-transform: uppercase;
+  }
+  h1 {
+    font-size: 6rem;
+    text-transform: uppercase;
+  }
+  h2 {
+    font-size: 5.5rem;
+  }
+  h3 {
+    font-size: 5rem;
+  }
+  h4 {
+    font-size: 4.5rem;
+  }
+  h5 {
+    font-size: 4rem;
+  }
+  h6 {
+    font-size: 3.5rem;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  .main-bg {
     background-image: url('../images/main-bg.svg');
     background-size: cover;
     background-position: center center;
-    color: var(--white-color)
-}
-.white-bg{
-background: var(--white-color);
-}
-
-.main-content{
+    color: var(--white-color);
+    z-index: 3;
+  }
+  .white-bg {
+    background: var(--white-color);
+    color:var(--primary-color)
+  }
+  .main-content {
     max-width: 1200px;
     margin: 0 auto;
     padding: var(--gap);
-}
-
-.section{
+  }
+  
+  .section {
     min-height: 100vh;
-}
+  }
+  
+  .menu {
+    background: var(--white-color);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    border-bottom: 1rem solid var(--light-gray-color);
+    z-index: 1;
+  }
+  
+  .menu-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  
+  .menu h1 {
+    font-size: 2.3rem;
+    color: var(--primary-color);
+  }
+  
+  .menu h1 a {
+    color: inherit;
+  }
+  
+  .menu ul {
+    list-style: none;
+    display: flex;
+  }
+  
+  .menu ul li a {
+    display: block;
+    padding: 2rem;
+    font-size: 1.8rem;
+    color: var(--primary-color);
+    position: relative;
+  }
+  
+  .menu ul li a::after {
+    content: '';
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    width: 0;
+    height: 0.2rem;
+    background: crimson;
+    transition: all 300ms ease-in-out;
+  }
+  
+  .menu ul li a:hover::after {
+    width: 50%;
+    left: 25%;
+  }
+  .menu-spacing{
+    height: 6.5rem;
+  }
 
-h1{
-    font-family: "Fira Sans", sans-serif;
-}
-h3{
-    font-weight: 400;
-  font-style: normal
-}
+  .sobre-content{
+    position: relative;
+    top: -7rem;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    gap: var(--gap);
+    height: 100vh;
+
+  }
+  .sobre-text-content, .sobre-img{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+   
+  }
+
+  .sobre-text-content h3{
+    font-size: 5.5rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1.3;
+  }
+
+  .sobre-img img {
+
+    max-width: 100%;
+    height: auto;
+  }
