--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@
     bottom: 1rem;
     left: 50%;
     width: 0;
-    height: 0.2rem;
+    min-height: 0.2rem;
     background: crimson;
     transition: all 300ms ease-in-out;
   }
@@ -132,16 +132,16 @@
     left: 25%;
   }
   .menu-spacing{
-    height: 6.5rem;
+    height: 10em;
   }
 
   .sobre-content{
     position: relative;
-    top: -7rem;
+    top: -16rem;
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     gap: var(--gap);
-    height: 100vh;
+    min-height: 100vh;
 
   }
   .sobre-text-content, .sobre-img{
@@ -161,7 +161,7 @@
   .sobre-img img {
 
     max-width: 100%;
-    height: auto;
+    min-height: auto;
   }
 
   .servicos-content{
@@ -169,7 +169,7 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
   }
   .servicos-content p {
