--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 
 * {
   margin: 0;
-  padding: 0;
+  padding: 1;
   box-sizing: border-box;
 }
 
@@ -142,7 +142,7 @@ a {
 }
 
 .menu-spacing {
-  height: 10em;
+  min-height: 10em;
 }
 
 .sobre-content {
@@ -164,7 +164,7 @@ a {
   font-size: 5.5rem;
   margin-bottom: 5rem;
   text-transform: uppercase;
-  line-height: 1.3;
+  min-height: 1.3;
 }
 
 .sobre-img img {
@@ -186,7 +186,7 @@ a {
 }
 
 .contatos-content {
-  position: relative;
+  max-width: 130rem;
   top: 0rem;
   display: grid;
   grid-template-columns: 1fr 1.5fr;
@@ -201,7 +201,7 @@ a {
 
 .contatos-img img {
   max-width: 100%;
-  height: auto; 
+  min-height: auto; 
 }
 
 .form {
@@ -248,7 +248,7 @@ body .full-area {
   background: none;
   color: var(--white-color);
   padding: 1.5rem 2rem;
-  font-size: 3rem;
+  font-size: 1.5rem;
   cursor: pointer;
   transition: all 300ms ease-in-out;
   margin-top: 3rem;
@@ -263,18 +263,76 @@ body .full-area {
   color: #aca9a9;
 }
 
-.numeros-content h4{
-  display: flex;
-  font-size: 3rem;
-  justify-content: center;
-  margin-top: 2rem;
+.numeros-alling{
+  row-gap: var(--gap);
+
+  
 }
 
-.numeros-content img{
-  max-width: 100%;
-  height: auto; 
-  width: 40px;
+.numeros-content {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--gap);
+  min-height: 10vh;
+  justify-content: center;
+  align-items: center;
 }
+
+.numeros-content div {
+  display: flex;
+  grid-template-columns: 1fr;
+  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; /* Centraliza verticalmente */
+}
+
+.contatos-content h5{
+display: flex;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  top: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.numeros-content {
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto 1fr 0.1; /* Define duas colunas: uma para o nome e outra para o número de telefone */
+  gap: 1rem; /* Espaçamento entre as colunas */
+  align-items: center; /* Alinha verticalmente ao centro */
+}
+
+.numeros-content a {
+  display: flex; /* Permite o alinhamento flexível dos elementos internos */
+  align-items: center; /* Alinha verticalmente ao centro */
+  text-decoration: none; /* Remove sublinhado dos links */
+  color: inherit; /* Herda a cor do texto do pai */
+  margin-left: -3rem;
+  transition: all 300ms ease-in-out;
+  left: 5rem;
+  white-space: nowrap;
+}
+.numeros-content a:hover {
+  background: var(--white-color);
+  color: var(--primary-color);
+  padding: 1rem;
+  white-space: nowrap;
+}
+
+
+.numeros-content img {
+  width: 24px; /* Define o tamanho do ícone do WhatsApp */
+  min-height: 24px;
+  margin-left: 5px; /* Espaçamento à esquerda do ícone */
+}
+
+.n2, .n1, .n3, .n4{
+ justify-content: center;
+ align-items: center;
+}
+.n4{font-size: 2rem;}
+
 
 @media (max-width: 768px) {
   .sobre-content {
@@ -289,6 +347,7 @@ body .full-area {
   .contatos-content {
     grid-template-columns: 1fr; 
     text-align: center; 
+    
   }
 
   .contatos-img {
