--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,12 +143,12 @@ a {
 }
 
 .menu-spacing {
-  min-height: 10em;
+  min-height: 0.5rem;
 }
 
 .sobre-content {
   position: relative;
-  top: -16rem;
+  top: 4rem;
   display: grid;
   grid-template-columns: 1fr 1.5fr;
   gap: var(--gap);
@@ -162,7 +162,7 @@ a {
 }
 
 .sobre-text-content h3 {
-  font-size: 5.5rem;
+  font-size: 5rem;
   margin-bottom: 5rem;
   text-transform: uppercase;
   min-height: 1.3;
@@ -359,6 +359,15 @@ display: flex;
     max-width: 100%;
     min-height: auto;
     display: none;
+
+    .menu{
+      bottom: 0;
+      text-align: center;
+    }
+    
+    .menu-content, ul{
+      flex-direction: column;
+    }
   }
 }
 
@@ -392,4 +401,59 @@ margin-bottom: 1rem;
   justify-content: center;
   align-items: center;
 }
+.close-menu{display: none;}
 
+@media (max-width: 800px){
+.menu{
+  bottom: 0;
+  text-align: center;
+}
+.menu-content, ul{
+  flex-direction: column;
+  justify-content: center;
+}
+.menu-content{
+  height: 100vh;
+}
+.menu{
+  display: none;
+}
+
+.close-menu{
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+}
+.close-menu-label::after{
+  content: '☰';
+  position: fixed;
+  z-index: 2;
+  right: 2rem;
+  top: 2rem;
+  background: var(--primary-color);
+  color: var(--white-color);
+  font-size: 3rem;
+  line-height: 3rem;
+  width: 3rem;
+  height: 3rem;
+  text-align: center;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+ 
+.menu-spacing{
+  display: none;
+  
+}
+.sobre-text-content{
+ margin-top: 13rem;
+}
+
+.close-menu:checked~.menu{
+display: block;
+}
+.close-menu:checked~.close-menu-label::after{
+  content: '×';
+}
+}
