--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,10 +162,15 @@ a {
 }
 
 .sobre-text-content h3 {
-  font-size: 5rem;
+  font-size: 4rem;
   margin-bottom: 5rem;
   text-transform: uppercase;
   min-height: 1.3;
+  gap: var(--gap);
+}
+.sobre-text-content p{
+  display: flex;
+  margin-bottom: 5rem;
 }
 
 .sobre-img img {
@@ -322,6 +327,28 @@ display: flex;
   white-space: nowrap;
 }
 
+.n6, .numeros-content a {
+  display: flex; 
+  align-items: center; 
+  text-decoration: none;
+  color: inherit;
+  margin-left: -3rem;
+  transition: all 300ms ease-in-out;
+  left: 5rem;
+  white-space: nowrap;
+  font-style: italic;
+  margin: 0.1rem;
+  
+  
+  
+}
+.n6, .numeros-content a:hover {
+  background: var(--primary-color);
+  color: var(--white-color);
+  padding: 0.5rem;
+  white-space: nowrap;
+}
+
 
 .numeros-content img {
   width: 24px; 
@@ -397,11 +424,23 @@ margin-bottom: 1rem;
 .localizacao{
   display: flex;
   top: 5rem;
-  top: 1rem;
   justify-content: center;
   align-items: center;
 }
+
+.endereço{
+  position: relative;
+  display: flex;
+ bottom: 20rem;
+justify-content: center;
+}
+
+
+
+
 .close-menu{display: none;}
+
+
 
 @media (max-width: 800px){
 .menu{
