--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,6 +341,7 @@ display: flex;
   
   
   
+  
 }
 .n6, .numeros-content a:hover {
   background: var(--primary-color);
@@ -400,12 +401,14 @@ display: flex;
 
 .footer {
   text-align: center;
+  font-size: 1.5rem;
 }
 footer a {
   color: dodgerblue;
 font-style: italic;
 font-size: 2.5rem;
 transition: all 300ms ease-in-out;
+font-size: 1.5rem;
 }
 footer a:hover {
 background: var(--light-gray-color);
