--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,11 @@
   align-items: center center;
 }
 
-
+.obg-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 * {
   margin: 0;
@@ -479,3 +483,26 @@ display: block;
 }
 }
 
+.back {
+  
+  border: 0.5rem solid var(--primary-color);
+  background: none;
+  color: var(--primary-color);
+  padding: 1.5rem 2rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+  margin-top: 3rem;
+}
+
+.back:hover {
+  background: var(--primary-color);
+  color: var(--white-color);
+  border-radius: 10%;
+}
+
+.back-content{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
