--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,11 @@
   --gap: 3rem;
 }
 
-.logo-img {
-  width: 5rem;
+.menu-content img {
+  display: flex;
+  width: 20rem;
   align-items: center center;
+  top: 0.5rem;
 }
 
 .obg-content{
