corrigindo posição de endereço na tela menor que 800p

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,6 +483,10 @@ display: block;
 .close-menu:checked~.close-menu-label::after{
   content: '×';
 }
+.endereço{
+  position: relative;
+  top: 10rem;
+}
 }
 
 .back {
